manifests/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reflectie-website
  namespace: app-test
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: reflectie.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-test
            port:
              number: 80
