manifests/overlays/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reflectie-website
  labels:
    app: reflectie-website
spec:
  type: NodePort
  selector:
    app: reflectie-website
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 32080
